start of bees - mostly done. \o/